--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 
 REACT_APP_DB_LINK = https://m49-music-app.onrender.com/
+
+REACT_APP_CLIENT_ID = 42fd9711eebd4fb5b3490fa50be6c067
+
+REACT_APP_REDIRECT_URI = http://localhost:3000/music
+
+REACT_APP_AUTH_ENDPOINT = https://accounts.spotify.com/authorize
+
+REACT_APP_RESPONSE_TYPE = token
